--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
 
 <body>
     <header>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-6">
-                    <a href="index.html" aria-label="link to homepage">
-                        <h2 id="branding">Hannah McNeish | Journalist</h2>
-                    </a>
-                </div>
-                <div class="col-sm-6">
-                <nav id="nav" class="nav-links-container nav-bar-item" aria-label="main menu">
-                    <a href="index.html" class="active nav-bar-item" aria-label="current page">Home</a>
-                    <a href="#" class="nav-bar-item" aria-label="link to library">Library</a>
-                    <a href="#" class="nav-bar-item" aria-label="link to contact page">Contact</a>
-                </nav>
-                </div>
-            </div>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html"><h2 id="branding">Hannah McNeish | Journalist</h2></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+      <div class="navbar-nav nav-links-container">
+        <a class="nav-link active menu-item" aria-current="page" href="index.html">Home</a>
+        <a class="nav-link menu-item" href="#">Library</a>
+        <a class="nav-link menu-item" href="#">Contact</a>
+      </div>
+    </div>
+  </div>
+</nav>
     </header>
     <section>
-        hero image with text overlay in middle
+                
+            </div>
     </section>
     <section>
         about section
