feat: add hero image and text overlay

--- a/index.html
+++ b/index.html
@@ -22,27 +22,45 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="index.html"><h2 id="branding">Hannah McNeish | Journalist</h2></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-      <div class="navbar-nav nav-links-container">
-        <a class="nav-link active menu-item" aria-current="page" href="index.html">Home</a>
-        <a class="nav-link menu-item" href="#">Library</a>
-        <a class="nav-link menu-item" href="#">Contact</a>
-      </div>
-    </div>
-  </div>
-</nav>
-    </header>
-    <section>
-                
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <h2 id="branding">Hannah McNeish | Journalist</h2>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav nav-links-container">
+                        <a class="nav-link active menu-item" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link menu-item" href="#">Library</a>
+                        <a class="nav-link menu-item" href="#">Contact</a>
+                    </div>
+                </div>
             </div>
+        </nav>
+    </header>
+    <section id="hero-image">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <img class="hero-image" src="assets/images/hero-image-newspaper-2.jpg"
+                        alt="a bundle of newspapers" />
+                    <div class="centered">
+                        <h2>Hannah McNeish</h2>
+                        <h3>Investigative Journalist</h3>
+                        <h3>Photographer</h3>
+                        <h3>Copywriter</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
     </section>
     <section>
-        about section
+        About section
     </section>
     <section>
         client image and work history side by side in here
