--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
         content="The site allows a view and gain an understanding of the work undertaken by Hannah McNeish">
     <meta name="keywords" content="investigative journalism, public health, photography">
     <meta name="author" content="Hannah McNeish">
-    <title>Hannah McNeish | Journalist</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    <title>Hannah McNeish | Journalist</title>
 </head>
 
 <body>
@@ -41,14 +38,15 @@
             </div>
         </nav>
     </header>
-    <section id="hero-image">
-        <div class="container-fluid">
+    <section>
+        <div class="container-fluid hero-container">
             <div class="row">
                 <div class="col">
                     <img class="hero-image" src="assets/images/hero-image-newspaper-2.jpg"
                         alt="a bundle of newspapers" />
-                    <div class="centered">
+                    <div class="hero-text-overlay">
                         <h2>Hannah McNeish</h2>
+                        <p>|</p>
                         <h3>Investigative Journalist</h3>
                         <h3>Photographer</h3>
                         <h3>Copywriter</h3>
@@ -56,18 +54,42 @@
                 </div>
             </div>
         </div>
-        </div>
+    </section>
+    <section>
+        <div class="container-fluid about-me-container">
+            <div class="row">
+                <div class="col">
+                    <div class="about-me">
+                        <div class="about-me-overlay">
+                            <h2>About</h2>
+                            <p>Hannah is a Glasgow based investigative journalist</p>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
         </div>
     </section>
     <section>
-        About section
-    </section>
-    <section>
-        client image and work history side by side in here
+        <div class="container-fluid">
+            <div class="row g-0">
+                <div class="col-12 col-md-6">
+                    <img class="bio-image" src="assets/images/hannah-mcneish-profile.jpg" alt="Image of Hannah Mcneish">
+                </div>
+                
+                <div class="col-12 col-md-6">
+                    <img class="bio-background-image" src="assets/images/newspaper-sepia.jpg" alt="An image of newspaper in sepia">
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         social links in here
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
