fix: remove white strip appearing at right side of screen using developer

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-logo" href="index.html">
                     <h2 id="branding">Hannah McNeish | Journalist</h2>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -47,7 +47,7 @@
                     <div class="hero-text-overlay">
                         <h2>Hannah McNeish</h2>
                         <p>|</p>
-                        <h3>Investigative Journalist</h3>
+                        <h3>Freelance Journalist</h3>
                         <h3>Photographer</h3>
                         <h3>Copywriter</h3>
                     </div>
