--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
         </nav>
     </header>
     <section>
-        <div class="container-fluid hero-container">
+        <div class="container.fluid hero-container">
             <div class="row">
                 <div class="col">
                     <img class="hero-image" src="assets/images/hero-image-newspaper-2.jpg"
                         alt="a bundle of newspapers" />
+
                     <div class="hero-text-overlay">
                         <h2>Hannah McNeish</h2>
                         <p>|</p>
@@ -51,6 +52,7 @@
                         <h3>Photographer</h3>
                         <h3>Copywriter</h3>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -60,13 +62,16 @@
             <div class="row">
                 <div class="col">
                     <div class="about-me">
+
                         <div class="about-me-overlay">
                             <h2>About</h2>
-                            <p>Hannah is a Glasgow based investigative journalist</p>
+                            <p>|</p>
+                            <h3>Freelance Journalist</h3>
+                            <h3>Photographer</h3>
+                            <h3>Copywriter</h3>
                         </div>
 
                     </div>
-
                 </div>
             </div>
         </div>
@@ -77,15 +82,22 @@
                 <div class="col-12 col-md-6">
                     <img class="bio-image" src="assets/images/hannah-mcneish-profile.jpg" alt="Image of Hannah Mcneish">
                 </div>
-                
+
                 <div class="col-12 col-md-6">
-                    <img class="bio-background-image" src="assets/images/newspaper-sepia.jpg" alt="An image of newspaper in sepia">
+                    <img class="bio-background-image" src="assets/images/newspaper-sepia.jpg"
+                        alt="An image of newspaper in sepia">
                 </div>
             </div>
         </div>
     </section>
     <footer>
-        social links in here
+        <div class="container-fluid footer-container">
+            <div class="row">
+                <div class="col-sm-6">Contact Hannah</div>
+                <div class="col-sm-6">Social Links</div>
+
+            </div>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
