--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="The site allows a view and gain an understanding of the work undertaken by Hannah McNeish">
-    <meta name="keywords" content="investigative journalism, public health, photography">
+    <meta name="keywords" content="investigative journalism, public health, ethical health reporting, human rights, photography">
     <meta name="author" content="Hannah McNeish">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -93,9 +93,41 @@
     <footer>
         <div class="container-fluid footer-container">
             <div class="row">
-                <div class="col-sm-6">Contact Hannah</div>
-                <div class="col-sm-6">Social Links</div>
-
+                <div class="col-sm-6">
+                    <a href="#">
+                        <h5 class="footer-contact-link">Contact Hannah <i class="fa fa-envelope"></i></h5>
+                    </a>
+                </div>
+                <div class="col-sm-6">
+                    <ul class="list-inline social-container">
+                        <li class="list-inline-item">
+                            <a target="_blank" href="#">
+                                <i class="fab fa-twitter" aria-hidden="true"></i>
+                                <span class="sr-only">Twitter</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="#">
+                                <i class="fab fa-youtube" aria-hidden="true"></i>
+                                <span class="sr-only">YouTube</span>
+                            </a>
+                        </li>
+                        
+                        <li class="list-inline-item">
+                            <a target="_blank" href="#">
+                                <i class="fab fa-linkedin" aria-hidden="true"></i>
+                                <span class="sr-only">LinkedIn</span>
+                            </a>
+                            </li>
+                            <li class="list-inline-item">
+                            <a target="_blank" href="#">
+                                <i class="fab fa-soundcloud" aria-hidden="true"></i>
+                                <span class="sr-only">SoundCloud</span>
+                            </a>
+                            </li>
+                    </ul>
+                </div>
+        
             </div>
         </div>
     </footer>
