change: fixed navbar to the top

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
                 <a class="navbar-logo" href="index.html">
-                    <h2 id="branding">Hannah McNeish | Journalist</h2>
+                   <h2 id="branding">Hannah McNeish | Journalist</h2>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -66,9 +66,7 @@
                         <div class="about-me-overlay">
                             <h2>About</h2>
                             <p>|</p>
-                            <h3>Freelance Journalist</h3>
-                            <h3>Photographer</h3>
-                            <h3>Copywriter</h3>
+                            <p>Hannah is a Glasgow based freelance journalist</p>
                         </div>
 
                     </div>
