add: add styling to footer links and icons

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         </div>
     </section>
     <section>
+        <!--reorder this to 3 columns (2, 8, 2)with text in centre column-->
         <div class="container-fluid about-me-container">
             <div class="row">
                 <div class="col">
@@ -66,7 +67,7 @@
                         <div class="about-me-overlay">
                             <h2>About</h2>
                             <p>|</p>
-                            <p>Hannah is a Glasgow based freelance journalist</p>
+                            <p class=>Hannah is a Glasgow based freelance journalist</p>
                         </div>
 
                     </div>
@@ -89,36 +90,40 @@
         </div>
     </section>
     <footer>
-        <div class="container-fluid footer-container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <a href="#">
-                        <h5 class="footer-contact-link">Contact Hannah <i class="fa fa-envelope"></i></h5>
-                    </a>
+        <div class="container-fluid">
+            <div id="footer-spacing" class="row">
+                <div class="col-sm-4">
+                    <p class="display-inline-block">For educational purposes only</p>
+
                 </div>
-                <div class="col-sm-6">
-                    <ul class="list-inline social-container">
+                <div class="col-sm-4">
+                    <p class="inline-block"><a href="contact.html" class="footer-contact-link">Contact Hannah <i class="fa fa-envelope" aria-hidden="true"></i>
+                    </a></p>
+                    
+                </div>
+                <div class="col-sm-4">
+                    <ul class="list-inline social-links">
                         <li class="list-inline-item">
-                            <a target="_blank" href="#">
+                            <a target="_blank" href="https://twitter.com/hannahmcneish?lang=en">
                                 <i class="fab fa-twitter" aria-hidden="true"></i>
                                 <span class="sr-only">Twitter</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" href="#">
+                            <a target="_blank" href="https://www.youtube.com/results?search_query=hannah+mcneish">
                                 <i class="fab fa-youtube" aria-hidden="true"></i>
                                 <span class="sr-only">YouTube</span>
                             </a>
                         </li>
                         
                         <li class="list-inline-item">
-                            <a target="_blank" href="#">
+                            <a target="_blank" href="https://uk.linkedin.com/">
                                 <i class="fab fa-linkedin" aria-hidden="true"></i>
                                 <span class="sr-only">LinkedIn</span>
                             </a>
                             </li>
                             <li class="list-inline-item">
-                            <a target="_blank" href="#">
+                            <a target="_blank" href="https://soundcloud.com/">
                                 <i class="fab fa-soundcloud" aria-hidden="true"></i>
                                 <span class="sr-only">SoundCloud</span>
                             </a>
