feat: add contact form with styling to contact.html

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav nav-links-container">
                         <a class="nav-link active menu-item" aria-current="page" href="index.html">Home</a>
-                        <a class="nav-link menu-item" href="#">Library</a>
-                        <a class="nav-link menu-item" href="#">Contact</a>
+                        <a class="nav-link menu-item" href="library.html">Library</a>
+                        <a class="nav-link menu-item" href="contact.html">Contact</a>
                     </div>
                 </div>
             </div>
