--- a/library.html
+++ b/library.html
@@ -39,7 +39,27 @@
         </nav>
     </header>
     <section>
-        Place carousel in here.
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-3"></div>
+                <div class="col-sm-12 col-lg-6">
+                    <div id="library-main-carousel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="assets/images/rwanda-construction-site.jpg" class="d-block w-100" alt="A construction site in Rwanda">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/images/rwanda-man-harversting-in-field.jpg" class="d-block w-100" alt="A Rwandan man harvesting in a field">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/images/ssudan-woman-carrying-baby.jpg" class="d-block w-100" alt="A woman carrying a baby in a South Sudan UN camp">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3"></div>
+            </div>
+        </div>
     </section>
     <section>
         Place press content in here.
