feat: add video content to library.html

--- a/library.html
+++ b/library.html
@@ -77,7 +77,29 @@
         </div>
     </section>
     <section>
-        Place press content in here.
+        <div class="container">
+            <div class="row">
+                <div class="col-4"></div>
+                <div class="col-4"></div>
+                <div class="col-sm-12 col-lg-4">
+                    <legend>Reporting for I24news</legend>
+                    <iframe width="500" height="315" src="https://www.youtube.com/embed/7jHuyCTBpgw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    
+                </div>
+                
+                <div class="col-4"></div>
+                <div class="col-4">
+                    <legend>International Journalism Festival</legend>
+                    <iframe width="500" height="315" src="https://www.youtube.com/embed/y8LhUdpNkXg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
     </section>
     <section>
         Other content.
