--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                             <label for="message" class="form-label">Message</label>
                             <textarea class="form-control" id="message" rows="3" placeholder="Please write your message here"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-dark">Submit</button>
 
                     </form>
                 </div>
