--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="The site allows a view and gain an understanding of the work undertaken by Hannah McNeish">
+        content="This site the work undertaken by Hannah McNeish">
     <meta name="keywords"
         content="investigative journalism, public health, ethical health reporting, human rights, photography">
     <meta name="author" content="Hannah McNeish">
@@ -20,18 +20,16 @@
 <body>
     <div class="container-fluid">
         <header class="row">
-            <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
+            <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white navbar-padding">
 
-                <a class="navbar-logo" href="index.html">
-                    <h2 id="branding">Hannah McNeish | Journalist</h2>
-                </a>
+                <a class="navbar-logo" href="index.html">Hannah McNeish | Journalist</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav nav-links-container">
+                <div class="collapse navbar-collapse justify-content-end toggler-text" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
                         <a class="nav-link active menu-item" aria-current="page" href="index.html">Home</a>
                         <a class="nav-link menu-item" href="library.html">Library</a>
                         <a class="nav-link menu-item" href="contact.html">Contact</a>
