--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
 
 
         </section>
-        <footer class="row">
-
-            <div id="footer-spacing">
+        <footer>
+            <div id="footer-spacing" class="row">
                 <div class="col-sm-4">
                     <p class="display-inline-block">For educational purposes only</p>
 
@@ -133,7 +132,6 @@
                 </div>
 
             </div>
-
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
