--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="This site the work undertaken by Hannah McNeish">
+    <meta name="description" content="This site the work undertaken by Hannah McNeish">
     <meta name="keywords"
         content="investigative journalism, public health, ethical health reporting, human rights, photography">
     <meta name="author" content="Hannah McNeish">
@@ -39,45 +38,17 @@
             </nav>
         </header>
         <section class="row">
-            <div class="hero-container">
-
-                <div class="col">
-                    <img class="hero-image" src="assets/images/hero-image-newspaper-2.jpg"
-                        alt="a bundle of newspapers" />
-
-                    <div class="hero-text-overlay">
-                        <h2>Hannah McNeish</h2>
-                        <p>|</p>
-                        <h3>Freelance Journalist</h3>
-                        <h3>Photographer</h3>
-                        <h3>Copywriter</h3>
-                    </div>
-
-                </div>
-
+            <div class="col">
+                <img class="hero-image" src="assets/images/hero-image-newspaper-2.jpg" alt="a bundle of newspapers" />
             </div>
         </section>
-        <section class="row">
-            <!--reorder this to 3 columns (2, 8, 2)with text in centre column-->
-            <div class="about-me-container">
 
-                <div class="col">
-                    <div class="about-me">
-
-                        <div class="about-me-overlay">
-                            <h2>About</h2>
-                            <p>|</p>
-                            <p class=>Hannah is a Glasgow based freelance journalist</p>
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-        </section>
         <section class="row">
 
 
+        </section>
+
+        <section class="row">
             <div class="col-12 col-md-6">
                 <img class="bio-image" src="assets/images/hannah-mcneish-profile.jpg" alt="Image of Hannah Mcneish">
             </div>
