--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         </section>
 
         <section class="row">
+            <div class="col center-about-column">
+
+            </div>
 
 
         </section>
