add: add resized profile image and biography text to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This site the work undertaken by Hannah McNeish">
+    <meta name="description" content="This site presents the work undertaken by Hannah McNeish">
     <meta name="keywords"
         content="investigative journalism, public health, ethical health reporting, human rights, photography">
     <meta name="author" content="Hannah McNeish">
@@ -61,10 +61,18 @@
 
         </section>
 
-        <section class="row">
-            <div id="bio-row-background"></div>
-
-
+        <section class="row justify-content-center profile-row">
+            <div class="col-lg-6 col-sm-12 g-0">
+                <div class="text-center">
+                    <img src="assets/images/hannah-mcneish-profile.jpg" class="img-fluid" alt="Profile picture of Hannah McNeish">
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12 g-0">
+                <div class="biography-text">
+                    <h2>Biography</h2>
+                    <p>Hannah McNeish is a multi-lingual and mutlimedia journalist, previously based in East Africa but travelled across the continent in search of stories. She is most passionate about rights and conflict, and these topics have been the crux of her reporting since she started working in radio, papers and magazines in Chile in 2009, and graduated to the U.K then Africa in 2010. She relocated to Glasgow in 2016, much to the disappointment of some governments and large organisations, and still has many more corners to explore and try to shine a light on. She has written, filmed and photographed for the main wire agencies, British and American newspapers, magazines, a range of NGOs and the UN, and major broadcasters such as the BBC and Al Jazeera.</p>
+                </div>
+            </div>
         </section>
         <footer>
             <div id="footer-spacing" class="row">
