update: update about section text on index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 <div class="about-row-text">
                     <h2>About</h2>
                     <p>|</p>
-                    <p>Hannah is a Glasgow based freelance Journalist</p>
+                    <p>Hannah is a Glasgow based freelance journalist who works in print, TV and as a radio producer and presenter.
+Reporting on human rights, climate change, women, global health, science and investigations.</p>
 
                 </div>
             </div>
