add: add lazy loading code to iframes

--- a/library.html
+++ b/library.html
@@ -50,7 +50,7 @@
                                 alt="A women in a field harvesting">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/ssudan-refugee-camp.jpg" class="d-block w-100"
+                            <img src="assets/images/ssudan-young-boy-eating.jpg" class="d-block w-100"
                                 alt="A women with a camel in South Sudan refugee camp">
                         </div>
                         <div class="carousel-item">
@@ -81,7 +81,7 @@
             <div class="row row-spacing">
                 <div class="col-sm-12 col-lg-4">
                     <div class="card">
-                        <iframe width="auto" height="315" src="https://www.youtube.com/embed/y8LhUdpNkXg"
+                        <iframe width="auto" height="315" loading="lazy" src="https://www.youtube.com/embed/y8LhUdpNkXg"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="col-sm-12 col-lg-4">
                     <div class="card">
-                        <iframe width="auto" height="315" src="https://www.youtube.com/embed/feCZqPs8Gsc"
+                        <iframe width="auto" height="315" loading="lazy" src="https://www.youtube.com/embed/feCZqPs8Gsc"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
@@ -108,7 +108,7 @@
                 </div>
                 <div class="col-sm-12 col-lg-4">
                     <div class="card">
-                        <iframe width="auto" height="315" src="https://www.youtube.com/embed/7jHuyCTBpgw"
+                        <iframe width="auto" height="315" loading="lazy" src="https://www.youtube.com/embed/7jHuyCTBpgw"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
@@ -251,7 +251,7 @@
                 </div>
                 <div class="col-sm-12 col-lg-3">
                     <div class="card">
-                        <img src="assets/images/guardian-logo.png" class="card-img-top" alt="The Guardian Logo">
+                        <img src="assets/images/guardian-logo.png" class="card-img-top card-logo" alt="The Guardian Logo">
                         <div class="card-body">
 
                             <p class="card-text">Read more of Hannah's articles here.</p>
