--- a/contact.html
+++ b/contact.html
@@ -18,32 +18,31 @@
 </head>
 
 <body>
-    <header class="row">
-        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white navbar-padding">
+    <div class="container-fluid">
+        <header class="row">
+            <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white navbar-padding">
 
-            <a class="navbar-logo" href="index.html">Hannah McNeish | Journalist</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end toggler-text" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link menu-item" aria-current="page" href="index.html">Home</a>
-                    <a class="nav-link menu-item" href="library.html">Library</a>
-                    <a class="nav-link active menu-item" href="contact.html">Contact</a>
+                <a class="navbar-logo" href="index.html">Hannah McNeish | Journalist</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end toggler-text" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link menu-item" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link menu-item" href="library.html">Library</a>
+                        <a class="nav-link active menu-item" href="contact.html">Contact</a>
+                    </div>
                 </div>
-            </div>
 
-        </nav>
-    </header>
-    <section>
-        <div class="container-fluid">
-            <div class="row g-0 contact-background">
-                <div class="col-2"></div>
-                <div class="col-8 form-position">
-                    <form>
-
-                        <legend>Contact Hannah</legend>
+            </nav>
+        </header>
+        <section id="contact-page-background" class="row justify-content-center">
+                <div class="col-sm-10 col-lg-6">
+                    <div class="form-background">
+                    <form class="form-position">
+                        <h2>Contact Hannah</h2>
                         <div class="mb-3">
                             <label for="fname" class="form-label">Full Name</label>
                             <input type="text" id="fname" class="form-control" placeholder="Enter you name" required>
@@ -69,16 +68,14 @@
                             <textarea class="form-control" id="message" rows="3"
                                 placeholder="Please write your message here"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-dark">Submit</button>
+                        
+                        <button type="submit" class="btn btn-secondary">Submit</button>
 
                     </form>
+                    </div>
                 </div>
-                <div class="col-2"></div>
-            </div>
-        </div>
-
-    </section>
-    <footer>
+        </section>
+        <footer>
             <div id="footer-spacing" class="row">
                 <div class="col-sm-4">
                     <p class="display-inline-block">For educational purposes only</p>
@@ -120,7 +117,8 @@
                 </div>
 
             </div>
-    </footer>
+        </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
