--- a/library.html
+++ b/library.html
@@ -321,26 +321,26 @@
                 <div class="col-sm-4">
                     <ul class="list-inline social-links">
                         <li class="list-inline-item">
-                            <a target="_blank" href="https://twitter.com/hannahmcneish?lang=en">
+                            <a target="_blank" href="https://twitter.com/hannahmcneish?lang=en" rel="noopener">
                                 <i class="fab fa-twitter" aria-hidden="true"></i>
                                 <span class="sr-only">Twitter</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" href="https://www.youtube.com/results?search_query=hannah+mcneish">
+                            <a target="_blank" href="https://www.youtube.com/results?search_query=hannah+mcneish" rel="noopener">
                                 <i class="fab fa-youtube" aria-hidden="true"></i>
                                 <span class="sr-only">YouTube</span>
                             </a>
                         </li>
 
                         <li class="list-inline-item">
-                            <a target="_blank" href="https://uk.linkedin.com/">
+                            <a target="_blank" href="https://uk.linkedin.com/" rel="noopener">
                                 <i class="fab fa-linkedin" aria-hidden="true"></i>
                                 <span class="sr-only">LinkedIn</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a target="_blank" href="https://soundcloud.com/">
+                            <a target="_blank" href="https://soundcloud.com/" rel="noopener">
                                 <i class="fab fa-soundcloud" aria-hidden="true"></i>
                                 <span class="sr-only">SoundCloud</span>
                             </a>
@@ -351,7 +351,7 @@
             </div>
         </footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
 </body>
