--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@ Reporting on human rights, climate change, women, global health, science and inv
 
                 </div>
                 <div class="col-sm-4">
-                    <p class="inline-block"><a href="contact.html" class="footer-contact-link">Contact Hannah <i
+                    <h2 class="inline-block"><a href="contact.html" class="footer-contact-link">Contact Hannah <i
                                 class="fa fa-envelope" aria-hidden="true"></i>
-                        </a></p>
+                        </a></h2>
 
                 </div>
                 <div class="col-sm-4">
