--- a/library.html
+++ b/library.html
@@ -39,28 +39,28 @@
             </nav>
         </header>
         <section class="row carousel-row justify-content-center g-0">  
-            <div class="col-sm-12 col-lg-6 carousel-padding">
+            <div class="col-sm-12 col-lg-4 carousel-position">
                 <!--credit to Bootstrap for carousel-->
                 <div id="library-carousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/images/ssudan-young-boy-eating.jpg" class="d-block w-100"
+                            <img src="assets/images/ssudan-young-boy-eating.jpg" width="612" height="408" class="d-block w-100"
                                 alt="A women with a camel in South Sudan refugee camp">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/men-picking-up-scrap-metal.jpg" class="d-block w-100"
+                            <img src="assets/images/men-picking-up-scrap-metal.jpg" width="612" height="408" class="d-block w-100"
                                 alt="Men standing over scrap metal in a bare field">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/ssudan-woman-carrying-baby.jpg" class="d-block w-100"
+                            <img src="assets/images/ssudan-woman-carrying-baby.jpg" width="612" height="408" class="d-block w-100"
                                 alt="A girl carrying a baby in a UN camp">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/ssudan-man-in-hospital-bed.jpg" class="d-block w-100"
+                            <img src="assets/images/ssudan-man-in-hospital-bed.jpg" width="612" height="408" class="d-block w-100"
                                 alt="A man in a hospital bed in South Sudan">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/images/african-artist-winni.jpg" class="d-block w-100"
+                            <img src="assets/images/african-artist-winni.jpg" width="612" height="408" class="d-block w-100"
                                 alt="African artist Winni performing on stage">
                         </div>
                     </div>
@@ -205,9 +205,9 @@
         </section>
         <section>
             <div class="row row-spacing">
-                <div class="col-sm-12 col-lg-3">
+                <div class="col-sm-6 col-lg-2">
                     <div class="card">
-                        <img src="assets/images/getty-images-logo.png" class="card-img-top card-logo"
+                        <img src="assets/images/getty-images-logo.png" width="301" height="167" class="card-img-top card-logo"
                             alt="Getty Images Logo">
                         <div class="card-body">
 
@@ -217,9 +217,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-lg-3">
+                <div class="col-sm-6 col-lg-2">
                     <div class="card">
-                        <img src="assets/images/the-new-humanitarian-logo.png" class="card-img-top card-logo"
+                        <img src="assets/images/the-new-humanitarian-logo.png" width="279" height="181" class="card-img-top card-logo"
                             alt="The New Humanitarian Logo">
                         <div class="card-body">
 
@@ -230,9 +230,9 @@
                     </div>
                 </div>
 
-                <div class="col-sm-12 col-lg-3">
+                <div class="col-sm-6 col-lg-2">
                     <div class="card">
-                        <img src="assets/images/aljazeera-logo.png" class="card-img-top card-logo" alt="Aljazeera Logo">
+                        <img src="assets/images/aljazeera-logo.png" width="284" height="177" class="card-img-top card-logo" alt="Aljazeera Logo">
                         <div class="card-body">
 
                             <p class="card-text">Read more of Hannah's articles here.</p>
@@ -241,9 +241,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-lg-3">
+                <div class="col-sm-6 col-lg-2">
                     <div class="card">
-                        <img src="assets/images/guardian-logo.png" class="card-img-top card-logo" alt="The Guardian Logo">
+                        <img src="assets/images/guardian-logo.png" width="286" height="176" class="card-img-top card-logo" alt="The Guardian Logo">
                         <div class="card-body">
 
                             <p class="card-text">Read more of Hannah's articles here.</p>
@@ -252,12 +252,9 @@
                         </div>
                     </div>
                 </div>
-
-            </div>
-            <div class="row row-spacing">
-                <div class="col-sm-12 col-lg-3">
+                <div class="col-sm-6 col-lg-2">
                     <div class="card">
-                        <img src="assets/images/reuters-logo.png" class="card-img-top card-logo" alt="Reuters Logo">
+                        <img src="assets/images/reuters-logo.png" width="339" height="148" class="card-img-top card-logo" alt="Reuters Logo">
                         <div class="card-body">
 
                             <p class="card-text">Read more of Hannah's articles here.</p>
@@ -266,9 +263,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-lg-3">
+                <div class="col-sm-6 col-lg-2">
                     <div class="card">
-                        <img src="assets/images/huffington-post-logo.png" class="card-img-top card-logo"
+                        <img src="assets/images/huffington-post-logo.png" width="286" height="176" class="card-img-top card-logo"
                             alt="The Huffington Post Logo">
                         <div class="card-body">
 
@@ -279,9 +276,13 @@
                     </div>
                 </div>
 
-                <div class="col-sm-12 col-lg-3">
+            </div>
+            <div class="row row-spacing justify-content-center">
+                
+
+                <div class="col-sm-6 col-lg-2">
                     <div class="card">
-                        <img src="assets/images/voice-of-america-logo.png" class="card-img-top card-logo"
+                        <img src="assets/images/voice-of-america-logo.png" width="254" height="198" class="card-img-top card-logo"
                             alt="Voice of America Logo">
                         <div class="card-body">
 
@@ -291,9 +292,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-lg-3">
+                <div class="col-sm-6 col-lg-2">
                     <div class="card">
-                        <img src="assets/images/iwmf-logo.png" class="card-img-top card-logo"
+                        <img src="assets/images/iwmf-logo.png" width="225" height="225" class="card-img-top card-logo"
                             alt="International Women's Media Foundation Logo">
                         <div class="card-body">
 
@@ -313,9 +314,9 @@
 
                 </div>
                 <div class="col-sm-4">
-                    <p class="inline-block"><a href="contact.html" class="footer-contact-link">Contact Hannah <i
+                    <h2 class="inline-block"><a href="contact.html" class="footer-contact-link">Contact Hannah <i
                                 class="fa fa-envelope" aria-hidden="true"></i>
-                        </a></p>
+                        </a></h2>
 
                 </div>
                 <div class="col-sm-4">
