add: add library and contact links to biography section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <p>|</p>
                     <h2>Journalist</h2>
                     <h2>Photographer</h2>
-                    <h2>Copywriter</h2>
+                    <h2>Consultant</h2>
                 </div>
             </div>
         </section>
@@ -53,7 +53,7 @@
             <div id="about-row-background">
                 <div class="about-row-text">
                     <h2>About</h2>
-                    <p>|</p>
+                    <p class="about-line">|</p>
                     <p>Hannah is a Glasgow based freelance journalist who works in print, TV and as a radio producer and presenter.
 Reporting on human rights, climate change, women, global health, science and investigations.</p>
 
@@ -72,6 +72,7 @@ Reporting on human rights, climate change, women, global health, science and inv
                 <div class="biography-text">
                     <h2>Biography</h2>
                     <p>Hannah McNeish is a multi-lingual and mutlimedia journalist, previously based in East Africa but travelled across the continent in search of stories. She is most passionate about rights and conflict, and these topics have been the crux of her reporting since she started working in radio, papers and magazines in Chile in 2009, and graduated to the U.K then Africa in 2010. She relocated to Glasgow in 2016, much to the disappointment of some governments and large organisations, and still has many more corners to explore and try to shine a light on. She has written, filmed and photographed for the main wire agencies, British and American newspapers, magazines, a range of NGOs and the UN, and major broadcasters such as the BBC and Al Jazeera.</p>
+                    <div class="bio-buttons-position"><span><a href="library.html" class="btn btn-secondary bio-buttons">View Hannah's Work</a></span><span><a href="contact.html" class="btn btn-secondary bio-buttons">Contact Hannah</a></span></div>
                 </div>
             </div>
         </section>
