--- a/confirmation.html
+++ b/confirmation.html
@@ -38,42 +38,14 @@
 
             </nav>
         </header>
-        <section id="contact-page-background" class="row justify-content-center">
-                <div class="col-sm-10 col-lg-6">
-                    <div class="form-background">
-                    <form action="confirmation.html" class="form-position">
-                        <h2>Contact Hannah</h2>
-                        <div class="mb-3">
-                            <label for="fname" class="form-label">Full Name</label>
-                            <input type="text" id="fname" class="form-control" placeholder="Enter you name" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="reason" class="form-label">Reason for Contact</label>
-                            <select id="reason" class="form-select">
-                                <option>Please select a reason</option>
-                                <option>Journalism</option>
-                                <option>Photography</option>
-                                <option>Copywriting</option>
-                                <option>General</option>
-                            </select>
-                        </div>
-                        <div class="mb-3">
-                        </div>
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="message" class="form-label">Message</label>
-                            <textarea class="form-control" id="message" rows="3"
-                                placeholder="Please write your message here"></textarea>
-                        </div>
-                        
-                        <button type="submit" class="btn btn-secondary">Submit</button>
-
-                    </form>
-                    </div>
+        <section class="row">
+            <div id="hero-image-row">
+                <div class="hero-image-text">
+                    <h3>Thank you for your email </h3>
+                    <p>I'll be in touch with you soon.</p>
+                    <h5>Hannah</h5> 
                 </div>
+            </div>
         </section>
         <footer>
             <div id="footer-spacing" class="row">
@@ -119,9 +91,6 @@
             </div>
         </footer>
     </div>
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
