docs: add issues and fixes section to README.md

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                                 <option>Please select a reason</option>
                                 <option>Journalism</option>
                                 <option>Photography</option>
-                                <option>Copywriting</option>
+                                <option>Consultancy</option>
                                 <option>General</option>
                             </select>
                         </div>
